--- a/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
+++ b/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
@@ -46,7 +46,7 @@ jobs:
       definition: 1195
       buildVersionToDownload: latestFromBranch
       branchName: refs/heads/dev
-      arti  actName: BrokerHostDebug
+      artifactName: BrokerHostDebug
   - task: DownloadSecureFile@1
     name: azureSampleApk
     displayName: Download Azure Sample Debug APK
