--- a/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
+++ b/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
@@ -32,7 +32,7 @@ jobs:
   - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
     parameters:
       policheckCmdLineArgsDir: adal
-  - task: DownloadPipelineArtifact@2
+  - task: DownloadBuildArtifacts@2
     displayName: Download Broker Host APK
     inputs:
       buildType: specific
@@ -48,7 +48,7 @@ jobs:
     inputs:
       secureFile: AzureSampleDebug.apk
       retryCount: 5
-  - task: DownloadPipelineArtifact@2
+  - task: DownloadBuildArtifacts@2
     displayName: Download Azure Sample Local Debug
     inputs:
       buildType: specific
