--- a/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
+++ b/azure-pipelines/ui-automations/experimental-msal-ui-automation.yml
@@ -46,7 +46,7 @@ jobs:
     displayName: Download Azure Sample Debug APK
     enabled: False
     inputs:
-      secureFile: AzureSampleDebug.apk
+      secureFile: azureSampleDebug.apk
       retryCount: 5
   - task: DownloadBuildArtifacts@0
     displayName: Download Azure Sample Local Debug
