--- a/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
+++ b/azure-pipelines/ui-automations/nightly-msal-ui-automation-against-nightly-broker-host.yml
@@ -52,7 +52,7 @@ jobs:
     displayName: Download Azure Sample Debug APK
     enabled: False
     inputs:
-      secureFile: AzureSampleDebug.apk
+      secureFile: azureSampleDebug.apk
       retryCount: 5
   - task: DownloadBuildArtifacts@0
     displayName: Download Azure Sample Local Debug
