--- a/testapps/testapp/src/main/AndroidManifest.xml
+++ b/testapps/testapp/src/main/AndroidManifest.xml
@@ -35,13 +35,16 @@
     <uses-permission android:name="android.permission.REORDER_TASKS" />
 
 
+    <!-- Marking the test app as resizeableActivity="true" in order to support multi-window-->
+    <!-- https://developer.android.com/guide/topics/ui/multi-window#resizeableActivity-->
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:name="com.microsoft.identity.client.testapp.MsalSampleApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:resizeableActivity="true">
         <!-- taskAffinity is set equal to empty string.  This translated to "null" taskAffinity at runtime.
             null task affinity may be used when creating multi-window apps-->
         <!-- https://developer.android.com/guide/topics/manifest/activity-element#aff -->
@@ -49,7 +52,7 @@
             android:name="com.microsoft.identity.client.testapp.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden"
-            android:taskAffinity="">
+            android:taskAffinity="com.microsoft.identity.client.testapp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -58,7 +61,8 @@
 
         <activity
             android:name="com.microsoft.identity.client.BrowserTabActivity"
-            android:launchMode="singleTask" >
+            android:taskAffinity="com.microsoft.identity.client.testapp"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
