--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -289,11 +289,11 @@ dependencies {
     // 'local' flavor dependencies
     localApi(project(":common")) {
         transitive = true
-//        exclude module: "jcip-annotations"
     }
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.4.3', changing: true)
 
+    //TODO: we will have to change transitive to true once common4j is published
     distApi("com.microsoft.identity:common:3.4.3") {
         transitive = false
     }
