change to msal:spotbugsDebug

--- a/azure-pipelines/pull-request-validation/pr-msal.yml
+++ b/azure-pipelines/pull-request-validation/pr-msal.yml
@@ -63,7 +63,7 @@ jobs:
   - task: Gradle@2
     displayName: 'Run Spotbugs'
     inputs:
-      tasks: spotbugsDebug
+      tasks: msal:spotbugsDebug
       publishJUnitResults: false
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: SpotBugs'
