--- a/msal/src/main/res/raw/msal_default_config.json
+++ b/msal/src/main/res/raw/msal_default_config.json
@@ -17,6 +17,8 @@
   "environment": "Production",
   "power_opt_check_for_network_req_enabled": true,
   "handle_null_taskaffinity": false,
+  "authorization_in_current_task": false,
+  "concurrent_authorization_requests": false,
   "http": {
     "connect_timeout": 10000,
     "read_timeout": 30000
