--- a/testapps/testapp/src/main/res/raw/msal_config_default.json
+++ b/testapps/testapp/src/main/res/raw/msal_config_default.json
@@ -3,6 +3,7 @@
   "authorization_user_agent" : "DEFAULT",
   "redirect_uri" : "msauth://com.msft.identity.client.sample.local/1wIqXSqBj7w%2Bh11ZifsnqwgyKrY%3D",
   "handle_null_taskaffinity": true,
+  "concurrent_authorization_requests": true,
   "authorities" : [
     {
       "type": "AAD",
