--- a/azure-pipelines/maven-release/msal-maven-release.yml
+++ b/azure-pipelines/maven-release/msal-maven-release.yml
@@ -19,38 +19,17 @@ resources:
     endpoint: ANDROID_GITHUB
 
 jobs:
-- job: Phase_1
-  displayName: SDL and Maven Tasks
-  cancelTimeoutInMinutes: 1
-  pool:
-    name: Hosted Windows 2019 with VS2019
-  steps:
-  - checkout: self
-    clean: true
-    submodules: recursive
-    persistCredentials: True
-  - template: azure-pipelines/templates/steps/credscan-policheck.yml@common
-    parameters:
-      policheckCmdLineArgsDir: msal
-  - template: azure-pipelines/templates/steps/maven-release/generate-release-artifacts.yml@common
-    parameters:
-      gradleAssembleReleaseTask: msal:clean msal:assembleDistRelease
-      gradleGeneratePomFiletask: msal:generatePomFileForMsalPublication
-      aarSourceFolder: msal\build\outputs\aar\
-      jarSourceFolder: msal\build\outputs\jar\
-      pomSourceFolder: msal\build\publications\msal\
-- job: Job_1
-  displayName: GPG Signing
-  dependsOn: Phase_1
-  pool:
-    name: Hosted Ubuntu 1604
-  steps:
-  - checkout: self
-    clean: true
-    submodules: recursive
-  - template: azure-pipelines/templates/steps/maven-release/gpg-signing.yml@common
-    parameters:
-      gpgSigning: "#!/bin/bash\n\nsudo apt-get update\nsudo apt-get install -y gnupg2\n\nGPG_TTY=$(tty)\nexport GPG_TTY\n\ngpg --import $(public.secureFilePath)\ngpg --import $(private.secureFilePath)\n\n\n\ngpg --batch --no-use-agent --passphrase-file $(passphrase.secureFilePath) --armor --detach-sign $(System.ArtifactsDirectory)/build_outputs/msal-$(msalVersion).aar\n\ngpg --batch --no-use-agent --passphrase-file $(passphrase.secureFilePath) --armor --detach-sign $(System.ArtifactsDirectory)/build_outputs/msal-$(msalVersion)-sources.jar\n\ngpg --batch --no-use-agent --passphrase-file $(passphrase.secureFilePath) --armor --detach-sign $(System.ArtifactsDirectory)/build_outputs/msal-$(msalVersion)-javadoc.jar\n\ngpg --batch --no-use-agent --passphrase-file $(passphrase.secureFilePath) --armor --detach-sign $(System.ArtifactsDirectory)/build_outputs/pom-default.xml\n\ncd $(System.ArtifactsDirectory)/build_outputs/ &&\nfor file in *; do\n if [[ -f \"$file\" ]]; then\n     md5sum -- \"$file\" > \"${file}.md5\"\n fi \n if [[ -f \"$file\" ]]; then\n     shasum -- \"$file\" > \"${file}.sha1\"\n fi\ndone\n\nmkdir  -p $(System.ArtifactsDirectory)/msal/$(msalVersion)\n\nmv $(System.ArtifactsDirectory)/build_outputs/*.jar $(System.ArtifactsDirectory)/msal/$(msalVersion)\nmv $(System.ArtifactsDirectory)/build_outputs/*.asc $(System.ArtifactsDirectory)/msal/$(msalVersion)\nmv $(System.ArtifactsDirectory)/build_outputs/*.aar $(System.ArtifactsDirectory)/msal/$(msalVersion)\nmv $(System.ArtifactsDirectory)/build_outputs/*.xml $(System.ArtifactsDirectory)/msal/$(msalVersion)\nmv $(System.ArtifactsDirectory)/build_outputs/*.sha1 $(System.ArtifactsDirectory)/msal/$(msalVersion)\nmv $(System.ArtifactsDirectory)/build_outputs/*.md5 $(System.ArtifactsDirectory)/msal/$(msalVersion)"
-  - template: azure-pipelines/templates/steps/maven-release/upload-to-nexus-sonatype.yml@common
-    parameters:
-      project: msal
+- template: azure-pipelines/templates/steps/maven-release/maven-release-jobs.yml@common
+  parameters:
+    project: msal
+    projectVersion: $(msalVersion)
+    checkoutSubmodules: recursive
+    gradleAssembleReleaseTask: msal:clean msal:assembleDistRelease
+    gradleGeneratePomFiletask: msal:generatePomFileForMsalPublication
+    aarSourceFolder: msal\build\outputs\aar
+    jarSourceFolder: msal\build\outputs\jar
+    pomSourceFolder: msal\build\publications\msal
+    gpgAar: true
+    gpgSourcesJar: true
+    gpgJavadocJar: true
+    gpgJar: false
