--- a/azure-pipelines/maven-release/msal-maven-release.yml
+++ b/azure-pipelines/maven-release/msal-maven-release.yml
@@ -2,10 +2,10 @@
 # Description: Publish msal to internal feed
 # https://identitydivision.visualstudio.com/Engineering/_packaging?_a=package&feed=AndroidADAL&package=com.microsoft.identity.client%3Amsal&protocolType=maven
 # Variable: 'msalVersion' was defined in the Variables tab
+# Variable: 'ENV_VSTS_MVN_ANDROIDADMSAL_USERNAME' was defined in the Variables tab
+# Variable: 'mvnAccessToken' was defined in the Variables tab
+# https://docs.microsoft.com/en-us/azure/devops/organizations/accounts/use-personal-access-tokens-to-authenticate
 name: $(date:yyyyMMdd)$(rev:.r)
-
-#variables:
-#- group: android-build-variables
 
 trigger: none
 pr: none
