--- a/msal/build.gradle
+++ b/msal/build.gradle
@@ -276,7 +276,7 @@ dependencies {
 
     snapshotApi(group: 'com.microsoft.identity', name: 'common', version: '3.4.3', changing: true)
 
-    distApi("com.microsoft.identity:common:3.4.3") {
+    distApi("com.microsoft.identity:common:3.4.4-RC1") {
         transitive = false
     }
 }
@@ -418,6 +418,8 @@ publishing {
 }
 
 tasks.whenTaskAdded { task ->
+
+
     if (task.name.contains('assemble')) {
         task.dependsOn 'pmd'
     }
@@ -426,6 +428,10 @@ tasks.whenTaskAdded { task ->
         && !task.name.contains('Snapshot')
         && !task.name.contains('Test')
         && !task.name.contains('Local')) {
-        task.dependsOn 'lint', 'javadocJar', 'sourcesJar'
+        task.dependsOn 'javadocJar', 'sourcesJar'
     }
+
+
+
+
 }
